@@ -1,5 +1,7 @@
 === master
 
+* Add default_help_order plugin to override the default order of help sections for all commands (jeremyevans)
+
 * Add help_examples plugin supporting showing examples in command help output (jeremyevans)
 
 * Add help_order method to support ordering and/or suppressing help sections (jeremyevans)
